--- a/index.html
+++ b/index.html
@@ -2,31 +2,49 @@
 <html>
 
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Thai&display=swap" rel="stylesheet">
     <title>Chat</title>
+    <style>
+        body{
+            font-family: 'Noto Serif Thai', serif;
+            background-color: #C3B1E1;
+            color: white;
+        }
+        input{
+            color: #B494E7;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Chat</h1>
-
-    <form id="nickname-form">
-        <label for="nickname">Nickname:</label>
-        <input id="nickname" type="text" required>
-        <button type="submit">Join</button>
-    </form>
-
-    <div id="chat-container" style="display: none;">
-        <div id="chat"></div>
-        <p id="typing" style="display: none;"></p>
-        <form id="message-form">
-            <input id="message" type="text">
-            <button type="submit">Send</button>
+    <div class="container">
+    <h1 class="text-center mt-4">Chat</h1>
+    <div class="row">
+        <div class="col-7 p-2 ">
+            <div id="chat-container" style="display: none;">
+                <form id="message-form">
+                    <input id="message" class="border border-1 rounded p-1" type="text">
+                    <button type="submit" class="btn btn-outline-light">Send</button>
+                </form>
+                <div id="chat" class="fst-italic"></div>
+                <p id="typing" style="display: none;"></p>
+            </div>
+        </div>        
+    <div class="col-5 p-2">
+        <form id="nickname-form">
+            <label for="nickname">Nickname:</label>
+            <input id="nickname" class="border border-1 rounded p-1" type="text" required>
+            <button type="submit" class="btn btn-outline-light">Join</button>
         </form>
-
+        <h2>Online</h2>
+        <ul id="user-list"></ul>
     </div>
-
-    <h2>Online</h2>
-    <ul id="user-list"></ul>
-
+    
+    </div>
+</div>
     <script src="/socket.io/socket.io.js"></script>
     <script>
         const socket = io();
