--- a/index.html
+++ b/index.html
@@ -1,32 +1,48 @@
 <!DOCTYPE html>
 <html>
 
+
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Chat</title>
+
+    <style>
+        body {
+            font-family: 'Times New Roman', Times, serif;
+            background-color: rgb(232, 232, 232);
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Chat</h1>
+    <div class="container">
+        <h1 class="text-center m-3">Chat</h1>
+        <div class="row mt-5">
+            <div class="col-8">
+                <div id="chat-container" style="display: none;">
 
-    <form id="nickname-form">
-        <label for="nickname">Nickname:</label>
-        <input id="nickname" type="text" required>
-        <button type="submit">Join</button>
-    </form>
+                    <form id="message-form">
+                        <input id="message" type="text" class="border border-2 border-dark rounded p-1">
+                        <button type="submit" class="btn btn-outline-success">Send</button>
+                    </form>
+                    <div id="chat"></div>
+                    <p class="fst-italic" id="typing" style="display: none;"></p>
+                </div>
+            </div>
+            <div class="col-4">
+                <form id="nickname-form" class="text-center">
+                    <label for="nickname">Nickname:</label>
+                    <input id="nickname" type="text" required class="border border-2 border-dark rounded p-1">
+                    <button type="submit" class="btn btn-outline-info">Join</button>
+                </form>
+                <hr>
+                <h3 class="m-2">Online</h3>
+                <ul class="text-success" id="user-list"></ul>
+            </div>
 
-    <div id="chat-container" style="display: none;">
-        <div id="chat"></div>
-        <p id="typing" style="display: none;"></p>
-        <form id="message-form">
-            <input id="message" type="text">
-            <button type="submit">Send</button>
-        </form>
-
+        </div>
     </div>
-
-    <h2>Online</h2>
-    <ul id="user-list"></ul>
-
     <script src="/socket.io/socket.io.js"></script>
     <script>
         const socket = io();
@@ -82,7 +98,7 @@
             event.preventDefault();
             const input = document.getElementById('message');
             const message = input.value;
-            console.log('send message to server',message)
+            console.log('send message to server', message)
             socket.emit('send message', message);
             input.value = '';
         });
