--- a/index.html
+++ b/index.html
@@ -3,29 +3,66 @@
 
 <head>
     <title>Chat</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <style>
+        body{
+            font-family: 'Neuton', serif;
+            background-color: rgb(231, 234, 233);
+        }
+        h1 span{
+            color: red;
+        }
+        #user-list{
+            list-style-type: none;
+            padding: 0;
+        }
+        #chat p{
+            margin: 5px;
+        }
+        #chat-container h2 span{
+            color: rgb(0, 222, 26);
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Chat</h1>
-
-    <form id="nickname-form">
-        <label for="nickname">Nickname:</label>
-        <input id="nickname" type="text" required>
-        <button type="submit">Join</button>
-    </form>
-
-    <div id="chat-container" style="display: none;">
-        <div id="chat"></div>
-        <p id="typing" style="display: none;"></p>
-        <form id="message-form">
-            <input id="message" type="text">
-            <button type="submit">Send</button>
-        </form>
-
+    <div class="container my-3">
+        <div class="row">
+            <div class="col-12 text-center mb-2">
+                <h1><strong><span>C</span>hat</strong></h1>
+                <form id="nickname-form">
+                    <label for="nickname"><strong>Nickname:</strong></label>
+                    <input id="nickname" type="text" required>
+                    <button type="submit">Join</button>
+                </form>                
+            </div>
+            <div class="col-12">
+                <div id="chat-container" style="display: none;">
+                    <hr>
+                    <div class="row mt-2">
+                        <div class="col-4 text-center">
+                            <h2><strong>On<span>line</span></strong></h2>
+                            <ul id="user-list" ></ul>
+                        </div>
+                        <div class="col-4">
+                            <div class="card p-3">
+                                <div id="chat"></div>
+                                <!-- <p id="typing"></p> -->
+                            </div>
+                        </div>
+                        <div class="col-4 text-center">
+                            <form id="message-form">
+                                <input id="message" type="text">
+                                <button type="submit">Send</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <h2>Online</h2>
-    <ul id="user-list"></ul>
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
