--- a/index.html
+++ b/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
 <head>
     <title>Chat</title>
 </head>
 
 <body>
-    <h1>Chat</h1>
+    <div class="container">
+        <div class="card">
+            <div class="card-header">
+                <h1>Node JS Chat Online</h1>
+            </div>
+            <div class="card-body">
+                <form id="nickname-form">
+                    <div class="row justify-content-center my-2">
+                        <div class="col-12 col-md-6 col-lg-6">
+                            <label for="nickname">Nickname:</label>
+                        </div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-12 col-md-6 col-lg-5">
+                            <input id="nickname" type="text" required class="form-control">
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-1">
+                            <button type="submit" class="btn btn-primary">Join</button>
+                        </div>
+                    </div>
+                </form>
+                <div id="chat-container" style="display: none;">
+                    <div id="chat"></div>
+                    <p id="typing" style="display: none;"></p>
+                    <form id="message-form">
+                        <input id="message" type="text" class="form-control">
+                        <button type="submit" class="btn btn-success">Send</button>
+                    </form>
+                </div>
+                <h2>Online</h2>
+                <ul id="user-list"></ul>
+            </div>
+        </div>
 
-    <form id="nickname-form">
-        <label for="nickname">Nickname:</label>
-        <input id="nickname" type="text" required>
-        <button type="submit">Join</button>
-    </form>
-
-    <div id="chat-container" style="display: none;">
-        <div id="chat"></div>
-        <p id="typing" style="display: none;"></p>
-        <form id="message-form">
-            <input id="message" type="text">
-            <button type="submit">Send</button>
-        </form>
 
     </div>
 
-    <h2>Online</h2>
-    <ul id="user-list"></ul>
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
@@ -82,7 +104,7 @@
             event.preventDefault();
             const input = document.getElementById('message');
             const message = input.value;
-            console.log('send message to server',message)
+            console.log('send message to server', message)
             socket.emit('send message', message);
             input.value = '';
         });
