--- a/index.html
+++ b/index.html
@@ -4,29 +4,100 @@
 <head>
     <title>Chat</title>
 </head>
+<style>
+    * {
+        padding: 0;
+        margin: 0;
+        font-family: "Honey";
+    }
+
+    body {
+        background-image: url(https://i.pinimg.com/originals/8b/7f/bc/8b7fbc2e623720393ad7ffa7e4896eac.gif);
+        background-size: 100%;
+        background-attachment: fixed;
+    }
+
+    h1 {
+        font-size: 70px;
+        text-align: center;
+    }
+
+    .formN {
+        margin-left: 50px;
+    }
+
+    .formN label {
+        font-size: 30px;
+    }
+
+    .formN #nickname {
+        font-size: 20px;
+    }
+
+    #chat {
+        font-size: 30px;
+    }
+
+    .inputN {
+        text-align: center;
+        width: 350px;
+        height: 30px;
+        border-radius: 10px;
+        font-size: 30px;
+    }
+
+    .join {
+        border-radius: 8px;
+        width: 70px;
+        height: 34px;
+    }
+
+    #user-list {
+        font-size: 20px;
+    }
+
+    footer {
+        margin-left: 50px;
+    }
+</style>
 
 <body>
     <h1>Chat</h1>
 
-    <form id="nickname-form">
-        <label for="nickname">Nickname:</label>
-        <input id="nickname" type="text" required>
-        <button type="submit">Join</button>
-    </form>
-
-    <div id="chat-container" style="display: none;">
+    <form class="formN" id="nickname-form">
+        <label for="nickname"><b>Nickname:</b></label>
+        <input class="inputN" id="nickname" type="text" required>
+        <button class="join" type="submit">Join</button>
         <div id="chat"></div>
         <p id="typing" style="display: none;"></p>
-        <form id="message-form">
-            <input id="message" type="text">
-            <button type="submit">Send</button>
+    </form>
+    <div id="chat-container" style="display: none;">
+
+        <form id="message-form" class="formN">
+
+            <input class="inputN" id="message" type="text">
+            <button class="join" type="submit">Send</button>
+
+
+        </form>
+
+    </div>
+    <div id="chat-container" style="display: none;">
+
+        <form id="message-form" class="formN">
+
+            <input class="inputN" id="message" type="text">
+            <button class="join" type="submit">Send</button>
+
+
         </form>
 
     </div>
 
-    <h2>Online</h2>
-    <ul id="user-list"></ul>
-
+    <footer>
+        <h2>Online</h2>
+        <p id="user-list"></p>
+    </footer>
     <script src="/socket.io/socket.io.js"></script>
     <script>
         const socket = io();
@@ -34,7 +105,7 @@
         // Display a message when a user joins
         socket.on('user joined', function (nickname) {
             console.log('joined', nickname);
-            const message = `${nickname} joined the chat`;
+            const message = `${nickname} เข้าร่วมแชท`;
             displayMessage(message);
         });
 
@@ -82,7 +153,7 @@
             event.preventDefault();
             const input = document.getElementById('message');
             const message = input.value;
-            console.log('send message to server',message)
+            console.log('send message to server', message)
             socket.emit('send message', message);
             input.value = '';
         });
