--- a/index.html
+++ b/index.html
@@ -4,28 +4,113 @@
 <head>
     <title>Chat</title>
 </head>
+<style>
+    * {
+        padding: 0;
+        margin: 0;
+        font-family:"MN Ha Kao";
+    }
+
+    body {
+        background-image: url(https://media.tenor.com/FIlAXMHf8vsAAAAd/naruto-background.gif);
+        background-size: 100%;
+        background-attachment: fixed;
+    }
+
+    .nick {
+        text-align: center;
+        padding: 1%;
+        font-size: 30px;
+    }
+
+    .Online {
+        text-align: center;
+        text-decoration: none;
+        font-size: 20px;
+        padding: 5%;
+        margin-top: -4%;
+
+    }
+
+    header {
+        text-align: center;
+        width: 100%;
+        height: auto;
+
+    }
+
+    h1 {
+        width: 100%;
+        height: 100%;
+        font-size: 80px;
+    }
+
+    input {
+        padding: 0;
+        width: 400px;
+        height: 40px;
+        text-align: center;
+        border-radius: 45px;
+        font-size: 20px;
+    }
+
+    button {
+        padding: 0;
+        width: 70px;
+        height: 45px;
+        text-align: center;
+        border-radius: 45px;
+        font-size: 20px;
+    }
+
+    article {
+        text-align: center;
+        width: 50%;
+        
+    }
+</style>
 
 <body>
-    <h1>Chat</h1>
+    <header>
+        <div class="container">
+            <div class="loco">
+                <h1>Chat</h1>
+            </div>
+        </div>
+    </header>
 
-    <form id="nickname-form">
-        <label for="nickname">Nickname:</label>
-        <input id="nickname" type="text" required>
-        <button type="submit">Join</button>
-    </form>
+    <section>
+        <div class="nick">
+            <form id="nickname-form">
+                <b>
+                    <label for="nickname">ชื่อ :</label>
+                </b>
+                <input id="nickname"  type="text" required >
+                <button type="submit">เข้าร่วม</button>
+            </form>
+        </div>
+        <div class="Online">
+            <h2>Online</h2>
+            <ul id="user-list"></ul>
+        </div>
+        <center>
+            <article>
+                <div id="chat-container" style="display: none;">
+                    <div id="chat"></div>
+                    <p id="typing" style="display: none;"></p>
+                    <form id="message-form">
+                        <input id="message" type="text">
 
-    <div id="chat-container" style="display: none;">
-        <div id="chat"></div>
-        <p id="typing" style="display: none;"></p>
-        <form id="message-form">
-            <input id="message" type="text">
-            <button type="submit">Send</button>
-        </form>
+                        <button type="submit">ส่ง</button>
+                    </form>
+                </div>
+            </article>
+        </center>
+    </section>
 
-    </div>
 
-    <h2>Online</h2>
-    <ul id="user-list"></ul>
+
+
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
@@ -34,13 +119,13 @@
         // Display a message when a user joins
         socket.on('user joined', function (nickname) {
             console.log('joined', nickname);
-            const message = `${nickname} joined the chat`;
+            const message = `${nickname} เข้าร่วมแชท`;
             displayMessage(message);
         });
 
         // Display a message when a user leaves
         socket.on('user left', function (nickname) {
-            const message = `${nickname} left the chat`;
+            const message = `${nickname} ออกจากแชท`;
             displayMessage(message);
         });
 
@@ -82,7 +167,7 @@
             event.preventDefault();
             const input = document.getElementById('message');
             const message = input.value;
-            console.log('send message to server',message)
+            console.log('send message to server', message)
             socket.emit('send message', message);
             input.value = '';
         });
